升级 Lombok 到 1.18.8、Gradle 到 5.5.1，支持 Java 11-12