@@ -6,15 +6,12 @@ version = '1.0-SNAPSHOT'
 
 mainClassName = 'me.hltj.java9demo.lombok.LombokDemo'
 
-compileJava {
-    options.compilerArgs += ['--add-modules', 'java.xml.ws.annotation']
-}
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
     compileOnly "org.projectlombok:lombok:1.16.22"
+    annotationProcessor "org.projectlombok:lombok:1.18.8"
     compile "ch.qos.logback:logback-classic:1.2.3"
 }
